--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ else(WIN32)
 	ENDIF (WITH_STEMMER)
 endif (WIN32)
 
+include_directories("${SPHINXSEARCH_SOURCE_DIR}/cppjieba/include")
+include_directories("${SPHINXSEARCH_SOURCE_DIR}/cppjieba/deps")
+
 #if(CMAKE_CONFIGURATION_TYPES)
 if (NOT WIN32)
 # dlopen doesn't affect windows anyway
